Closed Bug 401907 Opened 18 years ago Closed 18 years ago

Running Help->Check for updates... leaks

Categories

(Core :: XBL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Keywords: memory-leak)

Attachments

(3 files)

Running Help->Check for updates... leaks at least on non-official builds. Some nsXULElements and various XBL objects, and things which those keep alive, are leaked.
Keywords: mlk
Blocks: 402335
Attached file leak log
steps to reproduce Help -> Check for update -> Leak
Flags: blocking-firefox3?
So the problem might that http://lxr.mozilla.org/seamonkey/source/toolkit/mozapps/update/content/updates.xml has #update twice and something in XBL doesn't release things in that case.
Assignee: nobody → Olli.Pettay
Component: Software Update → XBL
Flags: blocking-firefox3?
Product: Firefox → Core
Attached patch proposed patchSplinter Review
Attachment #289868 - Flags: superreview?(bzbarsky)
Attachment #289868 - Flags: review?(bzbarsky)
Depends on: 405044
QA Contact: software.update → xbl
Comment on attachment 289868 [details] [diff] [review] proposed patch The reason to use the first ID (not last) is to be consistent with HTML's getElementById
Comment on attachment 289868 [details] [diff] [review] proposed patch Looks good, but can we please: 1) Add a mochitest for this (actually testing that the first binding with that id is used). 2) Get a bug filed on the XBL file in question.
Attachment #289868 - Flags: superreview?(bzbarsky)
Attachment #289868 - Flags: superreview+
Attachment #289868 - Flags: review?(bzbarsky)
Attachment #289868 - Flags: review+
(1) Will add (2) Bug 405044 blocks this one.
Comment on attachment 289904 [details] [diff] [review] with mochitest Fixing leak. If this gets approved, also Bug 405044 needs to be approved.
Attachment #289904 - Flags: approval1.9?
Comment on attachment 289904 [details] [diff] [review] with mochitest a=beltzner for drivers
Attachment #289904 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: