Bug 401907, Running Help->Check for updates... leaks, r+sr=bz, a=beltzner